--- a/Editor/AssetBundleChecker.Editor.asmdef
+++ b/Editor/AssetBundleChecker.Editor.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "AssetBundleChecker.Editor",
-    "references": [],
-    "optionalUnityReferences": [],
+    "rootNamespace": "",
+    "references": [
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:84651a3751eca9349aac36a66bba901b"
+    ],
     "includePlatforms": [
         "Editor"
     ],
@@ -9,6 +12,14 @@
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.addressables",
+            "expression": "",
+            "define": "CHECKER_WITH_ADDRESSABLES"
+        }
+    ],
+    "noEngineReferences": false
 }
